# autoc

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  COORDINATE_CONVENTIONS.md  Makefile  README.md  SETUP.md  TODO  aircraft_state.h  analyze_dtest.sh  autoc-eval.cc  autoc-eval.ini  autoc-mini.ini  autoc-minimal-eval.ini  autoc-minimal.ini  autoc-profile.ini  autoc.cc  autoc.h  autoc.ini  bytecode2cpp.cc  config_manager.cc  config_manager.h  crrcsim.sh  eval_backend.h  eval_logger.cc  eval_logger.h  fitness_computer.cc  fitness_computer.h  gp_bytecode.cc  gp_bytecode.h  gp_evaluator.h  gp_evaluator_crcsim.cc  gp_evaluator_crcsim.h  gp_evaluator_desktop.cc  gp_evaluator_desktop.h  gp_evaluator_embedded.cc  gp_evaluator_embedded.h  gp_evaluator_portable.cc  gp_evaluator_portable.h  (+31 more)
.github/workflows/: claude.yml
.specify/memory/: constitution.md
docs/: COORDINATE_CONVENTIONS.md  failsafe-behavior-audit.md  inav-signal-path-audit.md  sensor-pipeline.md  sim-to-real-analysis.md
flight-results/flight-20260320/: blackbox_log_2026-03-20_183938.01.event  blackbox_log_2026-03-20_183938.01.gps.csv  blackbox_log_2026-03-20_183938.01.gps.gpx  blackbox_log_2026-03-20_183938.TXT  flight_log_2026-03-21T01-47-21.txt
flight-results/flight-20260322/: ANALYSIS.md  blackbox_log_2026-03-22_103857.01.event  blackbox_log_2026-03-22_103857.01.gps.csv  blackbox_log_2026-03-22_103857.01.gps.gpx  blackbox_log_2026-03-22_103857.TXT  flight_log_2026-03-22T18-02-06.txt
flight-results/flight-20260327/: blackbox_log_2026-03-27_172848.01.event  blackbox_log_2026-03-27_172848.01.gps.csv  blackbox_log_2026-03-27_172848.01.gps.gpx  blackbox_log_2026-03-27_172848.TXT  flight_log_2026-03-28T00-34-31.txt
flight-results/flight-20260403/: blackbox_log_2026-04-03_171339.01.event  blackbox_log_2026-04-03_171339.01.gps.csv  blackbox_log_2026-04-03_171339.01.gps.gpx  blackbox_log_2026-04-03_171339.02.event  blackbox_log_2026-04-03_171339.02.gps.csv  blackbox_log_2026-04-03_171339.02.gps.gpx  blackbox_log_2026-04-03_171339.TXT  flight-report.md  flight_log_2026-04-04T00-20-44.txt  flight_log_2026-04-04T00-29-10.txt
flight-results/flight-20260407/: blackbox_log_2026-04-07_191137.01.csv  blackbox_log_2026-04-07_191137.01.event  blackbox_log_2026-04-07_191137.01.gps.csv  blackbox_log_2026-04-07_191137.01.gps.gpx  blackbox_log_2026-04-07_191137.02.csv  blackbox_log_2026-04-07_191137.02.event  blackbox_log_2026-04-07_191137.02.gps.csv  blackbox_log_2026-04-07_191137.02.gps.gpx  blackbox_log_2026-04-07_191137.TXT  flight-report.md  flight_log_2026-04-08T02-16-40.txt  flight_log_2026-04-08T02-22-51.txt
include/autoc/: autoc.h  math_utils.h
include/autoc/eval/: aircraft_state.h  backend.h  eval_logger.h  fitness_computer.h  fitness_decomposition.h  pathgen.h  selection.h  sensor_math.h  variation_generator.h
include/autoc/nn/: evaluator.h  nn_input_computation.h  nn_inputs.h  population.h  serialization.h  topology.h
include/autoc/rpc/: protocol.h
include/autoc/util/: config.h  rng.h  threadpool.h
scripts/: correlate_flight.py  crrcsim.sh  eval_suite.sh  latency_analysis.py  rebuild-perf.sh  rebuild.sh  verify_flight_log.py
specs/: ATTENTION_TO_DETAIL.md  BACKLOG.md  CONTROL_STICKS.MD  FASTMATH.md  FITNESS_SIMPLIFY_20260221.md  LAYERED_CONTROLLER.md  MAKE_DEME_WORK.md  NEW_PATHS.md  NODE_MASKING.md  PARETO.md  PROFILING.md  RAMP_LANDSCAPE.md  RENDER_REAL.md  REPLACE_BOOST.md  SCALEUP.md  SINGLE_PRNG.md  UNIFY.md  ZZZ-FLASH_SPEEDUP.md  ZZZ-MAKE_DEMES_WORK.md  ZZZ-REPLACE_BOOST.md  ZZZ-SCALEUP.md  ZZZ-TEMPORAL_STATE.md
specs/014-nn-training-signal/: HANDOFF.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-nn-training-signal/analysis/: gp-includes.md
specs/014-nn-training-signal/checklists/: requirements.md
specs/014-nn-training-signal/contracts/: config.md  nn-serialization.md  rpc-transport.md
specs/015-nn-training-improvements/: data-model.md  flight-analysis-20260320.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-eval-automation/: spec.md
specs/017-visual-target-tracking/: spec.md
specs/018-flight-analysis/: data-model.md  flight-timing-20260320.md  plan.md  quickstart.md  research.md  span_timeline.py  spec.md  tasks.md
specs/018-flight-analysis/checklists/: requirements.md
specs/019-improved-crrcsim/: compare_response.py  data-model.md  flight_response.py  plan.md  quickstart.md  research.md  sim_response.py  spec.md  tasks.md
specs/020-pre-flight-pipeline/: plan.md  spec.md  tasks.md
specs/021-xiao-ahrs-crosscheck/: data-model.md  flight-choreography.md  flight-plan.md  plan.md  research.md  spec.md  tasks.md
specs/022-tracking-cone-fitness/: coordinate-cleanup-research.md  data-model.md  development-report.md  flight_nn_polar_viz.py  intercept_visualization.py  plan.md  research.md  scoring_surface_explore.py  sim_polar_viz.py  spec.md  tasks.md
specs/023-ood-and-engage-fixes/: data-model.md  plan.md  quickstart.md  remaining-work.md  research.md  sim_polar_viz.py  spec.md  tasks.md  train-eval-code-dedup.md
specs/024-craft-variations/: spec.md
specs/archive/: ZZZ-ATTENTION_TO_DETAIL.md  ZZZ-LARGE_SCENARIO_STRATEGY.md  ZZZ-LAYERED_CONTROLLER.md  ZZZ-RENDER_REAL.md  ZZZ-UNIFY.md  ZZZ-VARIABLE_RABBIT.md  ZZZ-VARIATIONS1.md
src/: autoc.cc
src/eval/: eval_logger.cc  fitness_computer.cc  fitness_decomposition.cc  pathgen.cc  selection.cc  sensor_math.cc
src/nn/: evaluator.cc  population.cc  serialization.cc
src/util/: config.cc  logger.cc
tests/: contract_config_tests.cc  contract_evaluator_tests.cc  contract_evolution_tests.cc  fitness_computer_tests.cc  fitness_decomposition_tests.cc  gp_evaluator_tests.cc  nn_evaluator_tests.cc  nn_population_tests.cc  nn_serialization_tests.cc  rpc_transport_tests.cc  selection_tests.cc
tools/: minisim.cc  nn2cpp.cc  nnextractor.cc  renderer.cc  renderer.h
xiao/: .gitignore  hb1-INAV_8.0.0_cli_20260322_210528.txt  inav-bench.cfg  inav-hb1.cfg  platformio.ini
xiao/include/: MSP.h  embedded_pathgen_selector.h  main.h  state.h
xiao/src/: controller.cpp  msplink.cpp
(+7 files in other folders)
